# novus-python

./: README.md
novus/c1_simple_datatypes/: m5_strings.py  m8_task_mileage_converter.py
novus/c4_container_datatypes/: m2_tuples.py  m4_dictionaries.py
novus/c5_functions_lambdas/: m1_basic_functions.py
novus/c7_modules_packages/p2-novus-corp/p2b-novus-corp-magic-numbers/: pyproject.toml
novusskills/c1_simple_datatypes/: m1_variables.py  m4_booleans.py  m6_duck_typing.py  m7_datatype_conversions.py
novusskills/c2_conditional_logic/: m1_conditional_expressions.py  m3_conditionals.py
novusskills/c4_compound_datatypes/: m1_lists.py  m2_tuples.py  m3_named_tuples.py
novusskills/c4_container_datatypes/: m4_dictionaries.py  m5_sets.py
novusskills/c5_functions_lambdas/: m2_intermediate_functions.py
novusskills/c6_error_handling/: m1_exception_hierarchy.py  m3_defining_exceptions.py  m4_handling_exceptions.py
novusskills/c7_modules_packages/: m3_packages_in_python.py
src/c10_decorators/: m1_function_decorators.py  m2_class_decorators.py
src/c1_simple_datatypes/: m1_variables.py  m2_none_type.py  m3_duck_typing.py  m3_numbers.py  m5_numbers.py  m6_strings.py
src/c2_conditional_logic/: m2_truhiness_falsiness.py
src/c3_loops_iterations/: m1_for_and_while_loops.py
src/c4_container_datatypes/: m1_lists.py
src/c5_functions_lambdas/: m3_advanced_functions.py  m4_lambdas.py  m5_builtin_functions.py  m6_functions_odds_and_ends.py
src/c6_error_handling/: m2_raising_exceptions.py
src/c6_iterators_generators/: m1_python_iterators.py  m2_python_generators.py
src/c7_modules_packages/: m3_packages_in_python.py
src/c7_modules_packages/p2-novus-corp/p2a-novus-corp-dateutil/: pyproject.toml
src/c7_modules_packages/p2_namespace_package/p2a_snake_say/: pyproject.toml
src/c7_modules_packages/p2_namespace_package/p2a_snake_say/snake/: utils1.py
src/c7_modules_packages/p2_namespace_package/p2b_snake_sing/: pyproject.toml
src/c7_modules_packages/p2_namespace_package/p2b_snake_sing/snake/: utils2.py
src/c8_oop_classes_objects/: m10_descriptor_protocol.py  m11_descriptor_usages.py  m12_get_set_and_del_attr.py  m1_class_definitions.py  m2_class_objects.py  m3_instance_objects.py  m4_oop_polymorphism.py  (+5 more)
(+5 files in other folders)
