# p2b-novus-corp-magic-numbers/pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["novus_corp"]
namespaces = true

[project]
name = "p2b-novus-corp-magic-numbers"
version = "1.1.8"
description = "Super Magic Number Utilities for the Novus Corporation"
license = { text = "Novus Corp Software License Agreement" }
